// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] mangata transfer MGX assets to [V3] moonriver: After 1`] = `
{
  "free": "999999879880303252117536339",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] mangata transfer MGX assets to [V3] moonriver: Before 1`] = `
{
  "free": "0x00000000033b2e3c9fd0803ce8000000",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] mangata transfer MGX assets to [V3] moonriver: system events 1`] = `
[
  {
    "data": {
      "messageHash": "(redacted)",
      "messageId": "(redacted)",
      "weight": {
        "proofSize": "(redacted)",
        "refTime": "(redacted)",
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] mangata transfer MOVR assets to [V3] moonriver: After 1`] = `
{
  "free": "0x00000000033b2e4180cb00907e100000",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] mangata transfer MOVR assets to [V3] moonriver: Before 1`] = `
{
  "free": "0x00000000033b2e420b92239507f80000",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] mangata transfer MOVR assets to [V3] moonriver: system events 1`] = `
[
  {
    "data": {
      "messageHash": "(redacted)",
      "messageId": "(redacted)",
      "weight": {
        "proofSize": "(redacted)",
        "refTime": "(redacted)",
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] moonriver transfer MGX assets to [V3] mangata: After 1`] = `
{
  "free": "0x00000000033b2e0b55c187d9416b382f",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] moonriver transfer MGX assets to [V3] mangata: Before 1`] = `
{
  "free": "0x00000000033b2e0632892bc52602382f",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] moonriver transfer MGX assets to [V3] mangata: system events 1`] = `[]`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] moonriver transfer MOVR assets to [V3] mangata: After 1`] = `
{
  "free": "0x00000000033b2e420b92239507f80000",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`[V3][V3] XCM tests for Mangata <-> moonriver [V3] moonriver transfer MOVR assets to [V3] mangata: Before 1`] = `
{
  "free": "0x00000000033b2e3c9fd0803ce8000000",
  "frozen": 0,
  "reserved": 0,
}
`;
